# czech_accounting

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  env.example  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
czech_accounting/: doc_events.py  hooks.py  modules.txt  patches.txt  test_doc_events.py
czech_accounting/assets/: cz_ads.py  depreciation_hook.py  tax_depreciation.py
czech_accounting/chart_of_accounts/: BUILD_NOTES.md  cz_coa.json
czech_accounting/fixtures/: account_category.json  asset_category.json  custom_field.json  custom_field_asset.json  custom_field_document.json  finance_book.json  naming_series.json
czech_accounting/setup/: README.md  coa.py  test_vat_templates.py  vat_templates.py
docs/: INDEX.md  README.md  ROADMAP.md
docs/_tools/: validate_kb.py
docs/adr/: 0001-statutory-statements-as-script-reports.md  README.md  _TEMPLATE.md
docs/conventions/: CODE-REVIEW.md  COMMITS.md  README.md  code-naming.md
docs/czech-accounting/: retention-evidence-and-gates.md  vat-currency-and-corrections.md
docs/governance/: EVIDENCE_STANDARD.md  REFERENCE_NOTE_TEMPLATE.md  RESEARCH_LOG.md
docs/guides/: statutory-books-and-assets.md
docs/knowledge-base/: AGENTS.md
docs/plans/: 00-master.md  audit-fixes.md  stream-1-CHANGES.md  stream-1-foundation-coa.md  stream-2-agendas-vat.md  stream-2-changes.md  stream-3-books-assets.md
docs/sources/: INDEX.md
scripts/: build_cz_coa.py
(+54 files in other folders)
