[project]
name = "czech_accounting"
authors = [
    { name = "Hleb Tkachenko", email = "afframe@hapd.cz" },
]
description = "Czech accounting extension for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "czech_accounting"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
